Remove visible overflow from cartesian chart and use margins to ensure overflowing elements are not cropped

--- a/site/src/examples/wealth-and-health-of-nations/index.css
+++ b/site/src/examples/wealth-and-health-of-nations/index.css
@@ -3,7 +3,6 @@
   width: 100%;
   height: 400px;
 }
-#wealth-and-health-of-nations > .cartesian-chart,
 .plot-area-container > .plot-area {
   overflow: visible;
 }
